force-app/main/default/objects/Webhook_Event__e/Webhook_Event__e.object-meta.xml
<CustomObject>
    <description>The event used to publish a webhook.</description>
    <label>Webhook Event</label>
    <pluralLabel>Webhook Events</pluralLabel>
    <!-- <publishBehavior>PublishImmediately</publishBehavior> -->
</CustomObject>