force-app/main/default/objects/Webhook_Event__e/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <description>The Request headers in JSON format.</description>
    <label>Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>