force-app/main/default/objects/Webhook_Event__e/fields/Object_Payload_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Payload_Id__c</fullName>
    <description>The object id of the object to post. If this field is populated, the payload__c field is ignored.</description>
    <label>Object Payload Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>