force-app/main/default/objects/Webhook_Event__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>The JSON Payload of the Webhook. If object_payload_id__c is populated, this field is ignored.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>