force-app/main/default/objects/Webhook_Event__e/fields/Webhook_Id__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Id__c</fullName>
    <description>The SalesForce Id of the Webhook__c object.</description>
    <label>Webhook Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>